bugfix(#771): ou tree must not contain null values