@@ -266,7 +266,7 @@ public class LhmLdapClient extends LdapTemplate implements UserRepository {
                 log.warn("No shortCode found for ou {} in basePath {}. Query failed with {} exception", ouLongName, parentOuBase, ex.getClass().getName());
             }
 
-            ouTree.addAll(ouShortnames.stream().filter(Objects::nonNull).collect(Collectors.toList()););
+            ouTree.addAll(ouShortnames.stream().filter(Objects::nonNull).toList());
 
             // update parent base by adding the current ou to the base path
             parentUserBase = ldapName.get(i) + "," + parentUserBase;
